[metadata]
name = django-email-signals
version = 0.0.2
description = A Django app that allows users to dynamically send emails whenever there are some changes on some tables..
long_description = file: README.md
long_description_content_type = text/markdown
license = MIT
license_files = LICENSE
author = Salaah Amin
url = https://github.com/Salaah01/django-email-signals
classifiers =
    Intended Audience :: Developers
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Topic :: Software Development :: Libraries :: Python Modules

[options]
python_requires = >=3.6
packages = find:
include_package_data = true
zip_safe = false

[options.packages.find]
exclude =
    example
    tests
    tests.*

[install_requires]
django = ">=3.2"
django-ckeditor = ">=5.0"